--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,6 +15,10 @@ spring:
     console:
       enabled: true
       path: /h2-console
+  security:
+    user:
+      ## 스프링 시큐리티에서 기본 생성해주는 임시비밀번호를 생성하지 않게 설정
+      password: 1
 
 springdoc:
   default-consumes-media-type: application/json;charset=UTF-8
